# fast_detect

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/fast_detect/: __init__.py  __main__.py  cli.py  clipper.py  constants.py  detector.py  helpers.py
